# Fish-Renderer

./: CMakeLists.txt  README.md
Fish-Renderer/: CMakeLists.txt  Fish-Renderer.cpp
Fish-Renderer/include/: asset_loader.h  config.h  input_handler.h  time_handler.h
Fish-Renderer/include/asset/: asset_loader.h  model_loader.h  shader_loader.h  texture_loader.h
Fish-Renderer/include/buffer/: buffer.h  data_type.h  texture.h  vertex_array.h  vertex_buffer.h
Fish-Renderer/include/camera/: camera.h
Fish-Renderer/include/render-component/: transformable.h
Fish-Renderer/include/renderer/: mesh.h  render_object.h  renderer.h
Fish-Renderer/include/shader/: shader.h  shader_loader.h
Fish-Renderer/res/config/: default_config.txt
Fish-Renderer/res/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl
Fish-Renderer/src/: CMakeLists.txt  Fish-Renderer.cpp  asset_loader.cpp
Fish-Renderer/src/asset/: CMakeLists.txt  asset_loader.cpp  model_loader.cpp  shader_loader.cpp  texture_loader.cpp
Fish-Renderer/src/buffer/: CMakeLists.txt  vertex_array.cpp
Fish-Renderer/src/camera/: CMakeLists.txt  camera.cpp
Fish-Renderer/src/render-component/: CMakeLists.txt  transformable.cpp
Fish-Renderer/src/renderer/: CMakeLists.txt  mesh.cpp  render_object.cpp  renderer.cpp
Fish-Renderer/src/shader/: CMakeLists.txt  shader.cpp  shader_loader.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: CMakeLists.txt  glad.c
